[package]
name = "tui_layout"
version = "0.1.0"
edition = "2021"
description = "A TUI management library for paneling and input focus."

[dependencies]
crossterm = "0.23.1"
tui = "0.18.0"

[dev-dependencies]
log = "0.4.0"
simple_logger = "1.11.0"
clap = { version = "3.1.8", features = ["derive"] }
lazy_static = "1.4.0"
backtrace = "0.3.66"
crossbeam = "0.8.1"