[package]
name = "tui_tiling"
version = "0.2.0"
authors = ["David Gronlund"]
edition = "2021"
description = "A TUI library for tiling components and and directing input"
readme = "README.md"
repository = "https://github.com/dagronlund/tui_tiling"
license = "MIT"
keywords = ["tui", "terminal"]

[dependencies]
crossterm = "0.25.0"
tui = "0.19.0"

[dev-dependencies]
lazy_static = "1.4.0"
backtrace = "0.3.67"
crossbeam = "0.8.1"
